--- a/AngularJs.Practice1App/AngularJs.Practice1App/index.html
+++ b/AngularJs.Practice1App/AngularJs.Practice1App/index.html
@@ -11,12 +11,16 @@
 
     <!-- Library Scripts -->
     <script src="Scripts/angular.min.js"></script>
+    <script src="Scripts/angular-resource.min.js"></script>
 
     <!-- Application Scripts -->
     <script src="app/app.js"></script>
     <script src="app/products/productListCtrl.js"></script>
+    <script src="common/services/common.services.js"></script>
+    <script src="common/services/productResources.js"></script>
+
 </head>
-<body ng-app="productManagement">
+<body ng-app="app.productManagement">
 
 <div class="panel panel-primary">
     <div class="panel-heading" style="font-size: large;">
